# Angaarash

./: .gitignore  .gitmodules  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Console.cpp  Console.hpp  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  Makefile  Parser.cpp  Parser.hpp  README.md  Token.cpp  Token.hpp  configure  evaluator.cpp  evaluator.h  helper_functions.cpp  helper_functions.hpp  imgui.ini  let.cpp  let.h  main.cpp  token.cpp  token.h
.github/workflows/: autorelease.yml
imgui/: imgui_demo.cpp
scripts/: build.sh
src/: App.cpp  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Console.cpp  Console.hpp  Engaar.cpp  Expression.cpp  Expression.hpp  Function.cpp  Parser.cpp  Parser.hpp  helper_functions.cpp  helper_functions.hpp
src_token/: Expression.hpp  Function.cpp  Function.hpp  Token.cpp  Token.hpp
